force-app/main/default/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>OBL</fullName>
        <description>OBL</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Recycled</fullName>
        </values>
        <values>
            <fullName>Reinquired</fullName>
        </values>
        <values>
            <fullName>Uncontacted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Autodialer_Opt_Out__c</fullName>
        <defaultValue>true</defaultValue>
        <description>ADO #217840</description>
        <inlineHelpText>Customer opts out of receiving calls from an automated dialer.</inlineHelpText>
        <label>Autodialer Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Best_Time_To_Call__c</fullName>
        <description>Best Time To Call</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Best Time To Call</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Lead_ID__c</fullName>
        <description>ADO#: 126899
Unique Lead ID from the CE Org</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CE Lead ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVENT_Participant_ID__c</fullName>
        <description>Unique CVENT Participant ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CVENT Participant ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Outcome__c</fullName>
        <description>Lead Status detail. The values of this fields are controlled by the lead status field</description>
        <label>Call Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Answered-Sold</fullName>
                </value>
                <value>
                    <fullName>Answering Machine</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Callback - RPC Unavailable</fullName>
                </value>
                <value>
                    <fullName>Closed - Bad Number</fullName>
                </value>
                <value>
                    <fullName>Closed - Contact did not inquire</fullName>
                </value>
                <value>
                    <fullName>Closed - Do not contact</fullName>
                </value>
                <value>
                    <fullName>Closed - Enrolling in other online school-K12</fullName>
                </value>
                <value>
                    <fullName>Closed - Enrolling in other online school-other/unknown</fullName>
                </value>
                <value>
                    <fullName>Closed - Institutional Inquiry</fullName>
                </value>
                <value>
                    <fullName>Closed - Interested in Homeschool</fullName>
                </value>
                <value>
                    <fullName>Closed - Not Interested</fullName>
                </value>
                <value>
                    <fullName>Closed - Not Parent/Legal Guardian</fullName>
                </value>
                <value>
                    <fullName>Closed - Returning to public school</fullName>
                </value>
                <value>
                    <fullName>Closed - Seeking GED</fullName>
                </value>
                <value>
                    <fullName>Closed - Summer school desired</fullName>
                </value>
                <value>
                    <fullName>Contacted-Callback</fullName>
                </value>
                <value>
                    <fullName>Disconnected Number</fullName>
                </value>
                <value>
                    <fullName>Hang Up</fullName>
                </value>
                <value>
                    <fullName>Hang Up-Right Party Contact</fullName>
                </value>
                <value>
                    <fullName>Invalid Number</fullName>
                </value>
                <value>
                    <fullName>Maxed Call Attempt Reached</fullName>
                </value>
                <value>
                    <fullName>No Answer/VM not setup/VM Full</fullName>
                </value>
                <value>
                    <fullName>NQ - Due to age-Too old</fullName>
                </value>
                <value>
                    <fullName>NQ - Due to age-Too young</fullName>
                </value>
                <value>
                    <fullName>NQ - Due to location</fullName>
                </value>
                <value>
                    <fullName>NQ - Due to regulations</fullName>
                </value>
                <value>
                    <fullName>NQ - Grade Not Offered</fullName>
                </value>
                <value>
                    <fullName>Registered for Info Session</fullName>
                </value>
                <value>
                    <fullName>Scheduled Callback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Response_Time__c</fullName>
        <description>ADO#: 175911</description>
        <formula>(First_Call_Completed_Date_Time__c  -  Lead_Eligible_for_Call_DateTime__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Response Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <description>Channel Type Category (Replacing MLSC)</description>
        <label>Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DIRECTAPPLICANT</fullName>
                </value>
                <value>
                    <fullName>DISPLAY</fullName>
                </value>
                <value>
                    <fullName>INBOUNDCALL</fullName>
                </value>
                <value>
                    <fullName>INBOUNDCHAT</fullName>
                </value>
                <value>
                    <fullName>INFOSESSION</fullName>
                </value>
                <value>
                    <fullName>OLADEFAULT</fullName>
                </value>
                <value>
                    <fullName>ONDEMPARENT</fullName>
                </value>
                <value>
                    <fullName>ONDEMWEBINAR</fullName>
                </value>
                <value>
                    <fullName>ONLINEPARENT</fullName>
                </value>
                <value>
                    <fullName>PDSOCIAL</fullName>
                </value>
                <value>
                    <fullName>PPC</fullName>
                </value>
                <value>
                    <fullName>SCHOOLORIENTATION</fullName>
                </value>
                <value>
                    <fullName>WEBINAR</fullName>
                </value>
                <value>
                    <fullName>WEBREQINFO</fullName>
                </value>
                <value>
                    <fullName>RETARGETING</fullName>
                </value>
                <value>
                    <fullName>REFERRALROCK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chat_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Chat Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Comments__c</fullName>
        <description>Comments fields on event registration forms</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition_Indicator__c</fullName>
        <formula>&apos;Prospect&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disposition Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ADO# 127898</description>
        <label>Event Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Code__c</fullName>
        <description>Unique Event Code/ID from CVENT</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <description>Event Date and Time from CVENT
ADO:126467</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Engagement_Score__c</fullName>
        <description>On24 Engagement score coming from CVENT</description>
        <label>Event Engagement Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <description>Event Location from CVENT
ADO#:126467</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Title__c</fullName>
        <description>Event Title from CVENT
ADO#126467</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Walk_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ADO# 160839</description>
        <label>Event Walk-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FA_Response_ID__c</fullName>
        <description>Form Assembly Unique ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FA Response ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Call_Completed_Date_Time__c</fullName>
        <description>ADO#175911</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First Call Completed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GA_Click_ID__c</fullName>
        <description>Click ID assigned from Google Ad Words</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GA Click ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Client_ID__c</fullName>
        <description>Unique Google Analytics assigned client ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GA Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Device__c</fullName>
        <description>Type of computer device from Google Analytics</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GA Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Exp_ID__c</fullName>
        <description>A/B or multi-variable test ID
Experiment_ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GA Exp ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Medium__c</fullName>
        <description>Channel medium from Google Analytics</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GA Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Source__c</fullName>
        <description>Channel source from Google Analytics</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GA Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Opt_Out__c</fullName>
        <description>ADO#389940
Field used by PWS Chat. A &quot;NO&quot; value trigger a &apos;False&apos; value for all 6 opt out  fields</description>
        <label>Global Opt Out</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade_Going_Into__c</fullName>
        <description>Specific grade level(s) selected by lead</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Grade Going Into</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfSMS__c</fullName>
        <defaultValue>true</defaultValue>
        <description>ADO#149664</description>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JellyFish_Unique_ID__c</fullName>
        <description>JellyFish Unique ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>JellyFish Unique ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landing_Page_URL__c</fullName>
        <description>Source property URL</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Landing Page URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assignment_Formula__c</fullName>
        <description>Lead assignment Formula
US 120468</description>
        <formula>MOD( VALUE (Lead_Auto_Number__c) ,  VALUE($Label.LeadRoundRobinAgentCount)  )+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Assignment Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Auto_Number__c</fullName>
        <description>Auto Number used for the round robin lead assignment formula
US120468</description>
        <label>Lead Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_RT_Name__c</fullName>
        <defaultValue>&quot;Caretaker&quot;</defaultValue>
        <description>The default value this field is &quot;Caretaker&quot; which is the RT name of the contact that should be merged with a matching lead.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead - Contact RT Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Eligible_for_Call_DateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Eligible for Call Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type_Text__c</fullName>
        <defaultValue>$RecordType.Name</defaultValue>
        <description>Text field with a default value of the RT Name.
This field is used in duplicate matching rules</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Record Type (Text)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Type__c</fullName>
        <description>Paid Search match type (P: Phrase, E: Exact,  B: Broad)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Match Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Event_Attendees__c</fullName>
        <description>Number of event attendees from registration</description>
        <label>Number of Event Attendees</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ON24_Reg_ID__c</fullName>
        <description>To hold the  reference Id for the respective event on On24.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ON24 Reg ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On24_Audience_URL__c</fullName>
        <description>This field is populated by CVENT and contains the Online event URL for a particular webinar
ADO# 348477</description>
        <encryptionScheme>None</encryptionScheme>
        <label>On24 Audience URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Department__c</fullName>
        <formula>Owner:User.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Lead__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Lead</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Type__c</fullName>
        <description>Determined by QAS based on valid phone number</description>
        <label>Phone Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>LandLine</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ADO#188967</description>
        <label>Postal Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reasons_for_Considering_CA__c</fullName>
        <description>Lead reason of interest question</description>
        <label>Reasons for Considering CA</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Academically</fullName>
                </value>
                <value>
                    <fullName>Bullying/Safe Environment</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied with School/Teacher</fullName>
                </value>
                <value>
                    <fullName>Flexible/Personalized Learning</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Specialized Needs/Health</fullName>
                </value>
                <value>
                    <fullName>Struggling Academically</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Rock_Code__c</fullName>
        <description>ADO TASK 407873</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Rock Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Rock_ID__c</fullName>
        <description>ADO TASK 407873</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Rock ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>As per the US#340832. It is populating the  Region value based on the code entered into the School_ID_Location__c field on Lead Object.</description>
        <formula>CASE( School_ID_Location__c , 

&quot;149&quot;, &quot;Region 1&quot;, 
&quot;619011&quot;, &quot;Region 1&quot;, 
&quot;899477&quot;, &quot;Region 1&quot;, 
&quot;1058761&quot;, &quot;Region 1&quot;, 
&quot;392307&quot;, &quot;Region 1&quot;, 
&quot;206409&quot;, &quot;Region 1&quot;, 
&quot;4952&quot;, &quot;Region 1&quot;, 
&quot;18934&quot;, &quot;Region 1&quot;, 
&quot;73229&quot;, &quot;Region 1&quot;, 

&quot;Region 1&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Phone_Number__c</fullName>
        <description>ADO#146819
This field is populated by a lead process builder</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SMS Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>School_Acronym__c</fullName>
        <formula>CASE( School_ID_Location__c , 

&quot;149&quot;, &quot;ACA&quot;, 
&quot;619011&quot;, &quot;ARCA&quot;, 
&quot;899477&quot;, &quot;CalCA at Central Coast&quot;, 
&quot;1058761&quot;, &quot;CalCA at Monterey Bay&quot;, 
&quot;392307&quot;, &quot;CalCA at North Bay&quot;, 
&quot;206409&quot;, &quot;CalCA at Ripon&quot;, 
&quot;4952&quot;, &quot;CalCA at Capistrano&quot;, 
&quot;18934&quot;, &quot;CalCA at Central&quot;, 
&quot;73229&quot;, &quot;WYCA&quot;, 



NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Acronym</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_ID_Location__c</fullName>
        <description>Unique school ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>School ID Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <description>ADO# 361757</description>
        <formula>CASE( School_ID_Location__c ,

&quot;149&quot;, &quot;Arizona Connections Academy&quot;,
&quot;619011&quot;, &quot;Arkansas Connections Academy&quot;,
&quot;899477&quot;, &quot;California Connections Academy Central Coast&quot;,
&quot;1058761&quot;, &quot;California Connections Academy Monterey Bay&quot;,
&quot;392307&quot;, &quot;California Connections Academy North Bay&quot;,
&quot;206409&quot;, &quot;California Connections Academy Ripon&quot;,
&quot;4952&quot;, &quot;California Connections Academy Southern California&quot;,
&quot;18934&quot;, &quot;California Connections Academy Central&quot;,
&quot;73229&quot;, &quot;Wyoming Connections Academy&quot;,



NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Needs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Special need requested during event registration</description>
        <label>Special Needs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_of_Interest__c</fullName>
        <description>Used by website for state of interest (if non-CA state)</description>
        <label>State of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UTM_Campaign__c</fullName>
        <description>Paid acquisition campaign name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Content__c</fullName>
        <description>Paid campaign creative information</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UTM Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Source__c</fullName>
        <description>Paid campaign source name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Term__c</fullName>
        <description>Paid campaign keyword string</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UTM Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Lead_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Lead Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Area_Of_Interest__c</fullName>
        <description>The Lead&apos;s area of interest, such as a program, degree, or concentration.</description>
        <inlineHelpText>The Lead&apos;s area of interest, such as a program, degree, or concentration.</inlineHelpText>
        <label>Area of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Birth_Date__c</fullName>
        <description>The Lead&apos;s birthdate.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
</CustomObject>